# traitementimage

./: pvisu-cremiC12257.tar
BioVisu/spring-embedders/: CMakeLists.txt
BioVisu/spring-embedders/.svn/: wc.db
BioVisu/spring-embedders/shaders/: compute.frag  compute.vert  computeForces.frag
BioVisu/spring-embedders/src/: Camera.cpp  Mesh.cpp  Object.cpp  Object.h  RenderingWidget.cpp  Shader.cpp  common.h  graph.cpp  main.cpp
ODL/: butterworth(3).c  butterworth.c  fft.c  fft.h  nlmeans.c
ODL/aquaBase/: .project  svn-commit.tmp~
pvisu-cremi/: pvisu
src/all/: color2mean  extract_channel  extract_channel.c  extract_channel.c~  gray2color  lena_red.ppm  lena_sub.ppm  test1  toto.ppm
src/td-app/: Makefile  extract.sh~  im-1-bin.ppm  im-1-dil.ppm  im-1-ero.ppm  mm_add  mm_binarize  mm_close  mm_dil  mm_ero  mm_label  mm_open  mm_substract  pre-op.sh  pre-op.sh~  rotate  rotate.c  rotate.c~
src/td-color/: Makefile  color_transfer  color_transfer.c  color_transfer.c~
src/td-fft/: #Makefile#  fft.c  fft.h  test_fft_module  test_fft_module.c
src/td-filter/: #nlmeans.c#  #nlmeans2.c#  Makefile  anisotropic_diffusion  anisotropic_diffusion.c  anisotropic_diffusion2.c  as_img.ppm  barbara_test.ppm  bilateral  bilateral.c  bilateral.c.old  butterworth  butterworth2.c  fft.c  fft.c.old  fft.h.old  heat_equation  heat_equation.c  lena_butter.ppm  lena_butter1.ppm  nlmeans  nlmeans.c  nlmeansmulticoeur.c  ps_img.ppm
src/td-mm/: #mm.c#  Makefile  Makefile.old  extract.sh.old  gear2.ppm  gear3.ppm  gear4.ppm  gear_binarize.ppm  gear_color.ppm  gradient_laplacien.sh  lena_add1.ppm  lena_add_test.ppm  lena_binarize.ppm  lena_close_test.ppm  lena_dil_plus_ero_test.ppm  lena_dil_test.ppm  lena_dildisk.ppm  lena_ero_test.ppm  lena_erodisk.ppm  lena_gradient.ppm  lena_gradient_test.ppm  lena_lapl.ppm  main.c  mm_add  (+15 more)
(+99 files in other folders)
